Updated the Model for the new Team Partial View

--- a/MLeagueManager2/Views/UserMain/CreateLeague.cshtml
+++ b/MLeagueManager2/Views/UserMain/CreateLeague.cshtml
@@ -16,6 +16,6 @@
     <br />
     @*@Html.PartialAsync("~/Views/Shared/Partials/NewTeamEdit_New.cshtml",Model.TeamObject)*@
 
-    <partial name="~/Views/Shared/Partials/NewTeamEdit_New.cshtml" model="Model.LeagueObject"/>
+    <partial name="~/Views/Shared/Partials/NewTeamEdit_New.cshtml" model="Model.TeamObject"/>
 }
 
